// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueScreenHeader should match the altered style by the prop headerStyles 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        Object {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": Object {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            Object {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              Object {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                MockedScreen
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "overflow": undefined,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              handlerTag={3}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "#052962",
                            "flexDirection": "row",
                            "justifyContent": "flex-end",
                            "paddingVertical": 10,
                          },
                          undefined,
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignSelf": "flex-end",
                              "flexDirection": "row",
                              "justifyContent": "space-between",
                              "width": "100%",
                            },
                            Array [
                              Object {
                                "marginTop": 20,
                              },
                              Object {
                                "height": 49,
                              },
                            ],
                            undefined,
                          ]
                        }
                      >
                        <View>
                          <View
                            style={
                              Object {
                                "paddingLeft": 14,
                                "width": 90,
                                "zIndex": 2,
                              }
                            }
                          >
                            <View
                              accessibilityLabel="Regions and specials editions menu"
                              accessibilityRole="button"
                              accessibilityState={
                                Object {
                                  "disabled": false,
                                }
                              }
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "backgroundColor": "transparent",
                                  "borderRadius": 24,
                                  "height": 42,
                                  "justifyContent": "center",
                                  "opacity": 1,
                                  "width": 42,
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "flex": 1,
                                    "justifyContent": "space-around",
                                    "marginRight": 14,
                                    "width": 55,
                                  }
                                }
                              >
                                <RNSVGSvgView
                                  bbHeight="42"
                                  bbWidth="42"
                                  fill="none"
                                  focusable={false}
                                  height={42}
                                  style={
                                    Array [
                                      Object {
                                        "backgroundColor": "transparent",
                                        "borderWidth": 0,
                                      },
                                      Object {
                                        "flex": 0,
                                        "height": 42,
                                        "width": 42,
                                      },
                                    ]
                                  }
                                  width={42}
                                >
                                  <RNSVGGroup
                                    fill={null}
                                    propList={
                                      Array [
                                        "fill",
                                      ]
                                    }
                                  >
                                    <RNSVGRect
                                      fill={
                                        Object {
                                          "payload": 4278190080,
                                          "type": 0,
                                        }
                                      }
                                      height="41"
                                      propList={
                                        Array [
                                          "stroke",
                                        ]
                                      }
                                      rx="20.5"
                                      stroke={
                                        Object {
                                          "payload": 4294967295,
                                          "type": 0,
                                        }
                                      }
                                      width="41"
                                      x="0.5"
                                      y="0.5"
                                    />
                                    <RNSVGCircle
                                      cx="29"
                                      cy="14"
                                      fill={
                                        Object {
                                          "payload": 4294949576,
                                          "type": 0,
                                        }
                                      }
                                      propList={
                                        Array [
                                          "fill",
                                        ]
                                      }
                                      r="7"
                                    />
                                    <RNSVGCircle
                                      cx="14"
                                      cy="14"
                                      fill={
                                        Object {
                                          "payload": 4294967295,
                                          "type": 0,
                                        }
                                      }
                                      propList={
                                        Array [
                                          "fill",
                                        ]
                                      }
                                      r="7"
                                    />
                                    <RNSVGCircle
                                      cx="29"
                                      cy="29"
                                      fill={
                                        Object {
                                          "payload": 4287683839,
                                          "type": 0,
                                        }
                                      }
                                      propList={
                                        Array [
                                          "fill",
                                        ]
                                      }
                                      r="7"
                                    />
                                    <RNSVGCircle
                                      cx="14"
                                      cy="29"
                                      fill={
                                        Object {
                                          "payload": 4294934287,
                                          "type": 0,
                                        }
                                      }
                                      propList={
                                        Array [
                                          "fill",
                                        ]
                                      }
                                      r="7"
                                    />
                                  </RNSVGGroup>
                                </RNSVGSvgView>
                                <Text
                                  style={
                                    Object {
                                      "color": "white",
                                      "fontFamily": "GuardianTextSans-Regular",
                                      "fontSize": 12,
                                      "lineHeight": 14.75,
                                      "top": 8,
                                    }
                                  }
                                >
                                  Editions
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            Array [
                              Object {
                                "flex": 1,
                                "flexDirection": "row",
                                "justifyContent": "flex-start",
                              },
                              Object {
                                "width": 0,
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "flex": 1,
                                  "flexDirection": "row",
                                },
                                Object {
                                  "justifyContent": "space-between",
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Object {
                                  "marginRight": 14,
                                }
                              }
                            >
                              <RNGestureHandlerButton
                                collapsable={false}
                                delayLongPress={600}
                                enabled={true}
                                exclusive={true}
                                handlerTag={4}
                                handlerType="NativeViewGestureHandler"
                                onGestureEvent={[Function]}
                                onGestureHandlerEvent={[Function]}
                                onGestureHandlerStateChange={[Function]}
                                onHandlerStateChange={[Function]}
                                rippleColor={0}
                                touchSoundDisabled={false}
                              >
                                <View
                                  accessible={true}
                                  collapsable={false}
                                  style={
                                    Object {
                                      "opacity": 1,
                                    }
                                  }
                                >
                                  <View>
                                    <Text
                                      style={
                                        Array [
                                          Object {
                                            "flexShrink": 0,
                                            "fontFamily": "GTGuardianTitlepiece-Bold",
                                            "fontSize": 24,
                                            "lineHeight": 26,
                                          },
                                          Array [
                                            Object {
                                              "color": "#FFFFFF",
                                              "marginTop": -2,
                                            },
                                            undefined,
                                            Object {
                                              "flexShrink": 0,
                                              "fontFamily": "GHGuardianHeadline-Regular",
                                              "fontSize": 24,
                                              "lineHeight": 26,
                                            },
                                            Object {},
                                          ],
                                        ]
                                      }
                                    >
                                      UK Daily
                                    </Text>
                                    <Text
                                      style={
                                        Array [
                                          Object {
                                            "flexShrink": 0,
                                            "fontFamily": "GTGuardianTitlepiece-Bold",
                                            "fontSize": 24,
                                            "lineHeight": 26,
                                          },
                                          Array [
                                            Object {
                                              "color": "#FFFFFF",
                                              "marginTop": -2,
                                            },
                                            Object {
                                              "color": "#ffe500",
                                            },
                                            undefined,
                                            Object {},
                                          ],
                                        ]
                                      }
                                    >
                                       
                                    </Text>
                                  </View>
                                </View>
                              </RNGestureHandlerButton>
                            </View>
                            <View
                              style={
                                Object {
                                  "paddingRight": 14,
                                }
                              }
                            >
                              <View
                                accessibilityHint="More issues"
                                accessibilityRole="button"
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                hitSlop={
                                  Object {
                                    "bottom": 10,
                                    "left": 10,
                                    "right": 10,
                                    "top": 10,
                                  }
                                }
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "opacity": 1,
                                  }
                                }
                              >
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "alignItems": "center",
                                        "borderRadius": 999,
                                        "height": 42,
                                        "justifyContent": "center",
                                        "paddingHorizontal": 21,
                                      },
                                      Object {
                                        "backgroundColor": "#ffe500",
                                      },
                                      Object {
                                        "alignItems": "center",
                                        "aspectRatio": 1,
                                        "justifyContent": "center",
                                        "paddingHorizontal": 0,
                                        "width": 42,
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  <Text
                                    allowFontScaling={false}
                                    style={
                                      Array [
                                        Object {
                                          "fontFamily": "GuardianIcons-Regular",
                                          "fontSize": 20,
                                          "lineHeight": 20,
                                        },
                                        Array [
                                          Object {
                                            "color": "#121212",
                                          },
                                          undefined,
                                        ],
                                      ]
                                    }
                                  >
                                    
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`IssueScreenHeader should match the default style 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        Object {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": Object {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            Object {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              Object {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  Object {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                MockedScreen
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "overflow": undefined,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              handlerTag={1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "#052962",
                            "flexDirection": "row",
                            "justifyContent": "flex-end",
                            "paddingVertical": 10,
                          },
                          undefined,
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignSelf": "flex-end",
                              "flexDirection": "row",
                              "justifyContent": "space-between",
                              "width": "100%",
                            },
                            Array [
                              Object {
                                "marginTop": 20,
                              },
                              Object {
                                "height": 49,
                              },
                            ],
                            undefined,
                          ]
                        }
                      >
                        <View>
                          <View
                            style={
                              Object {
                                "paddingLeft": 14,
                                "width": 90,
                                "zIndex": 2,
                              }
                            }
                          >
                            <View
                              accessibilityLabel="Regions and specials editions menu"
                              accessibilityRole="button"
                              accessibilityState={
                                Object {
                                  "disabled": false,
                                }
                              }
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Object {
                                  "backgroundColor": "transparent",
                                  "borderRadius": 24,
                                  "height": 42,
                                  "justifyContent": "center",
                                  "opacity": 1,
                                  "width": 42,
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "flex": 1,
                                    "justifyContent": "space-around",
                                    "marginRight": 14,
                                    "width": 55,
                                  }
                                }
                              >
                                <RNSVGSvgView
                                  bbHeight="42"
                                  bbWidth="42"
                                  fill="none"
                                  focusable={false}
                                  height={42}
                                  style={
                                    Array [
                                      Object {
                                        "backgroundColor": "transparent",
                                        "borderWidth": 0,
                                      },
                                      Object {
                                        "flex": 0,
                                        "height": 42,
                                        "width": 42,
                                      },
                                    ]
                                  }
                                  width={42}
                                >
                                  <RNSVGGroup
                                    fill={null}
                                    propList={
                                      Array [
                                        "fill",
                                      ]
                                    }
                                  >
                                    <RNSVGRect
                                      fill={
                                        Object {
                                          "payload": 4278190080,
                                          "type": 0,
                                        }
                                      }
                                      height="41"
                                      propList={
                                        Array [
                                          "stroke",
                                        ]
                                      }
                                      rx="20.5"
                                      stroke={
                                        Object {
                                          "payload": 4294967295,
                                          "type": 0,
                                        }
                                      }
                                      width="41"
                                      x="0.5"
                                      y="0.5"
                                    />
                                    <RNSVGCircle
                                      cx="29"
                                      cy="14"
                                      fill={
                                        Object {
                                          "payload": 4294949576,
                                          "type": 0,
                                        }
                                      }
                                      propList={
                                        Array [
                                          "fill",
                                        ]
                                      }
                                      r="7"
                                    />
                                    <RNSVGCircle
                                      cx="14"
                                      cy="14"
                                      fill={
                                        Object {
                                          "payload": 4294967295,
                                          "type": 0,
                                        }
                                      }
                                      propList={
                                        Array [
                                          "fill",
                                        ]
                                      }
                                      r="7"
                                    />
                                    <RNSVGCircle
                                      cx="29"
                                      cy="29"
                                      fill={
                                        Object {
                                          "payload": 4287683839,
                                          "type": 0,
                                        }
                                      }
                                      propList={
                                        Array [
                                          "fill",
                                        ]
                                      }
                                      r="7"
                                    />
                                    <RNSVGCircle
                                      cx="14"
                                      cy="29"
                                      fill={
                                        Object {
                                          "payload": 4294934287,
                                          "type": 0,
                                        }
                                      }
                                      propList={
                                        Array [
                                          "fill",
                                        ]
                                      }
                                      r="7"
                                    />
                                  </RNSVGGroup>
                                </RNSVGSvgView>
                                <Text
                                  style={
                                    Object {
                                      "color": "white",
                                      "fontFamily": "GuardianTextSans-Regular",
                                      "fontSize": 12,
                                      "lineHeight": 14.75,
                                      "top": 8,
                                    }
                                  }
                                >
                                  Editions
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          style={
                            Array [
                              Object {
                                "flex": 1,
                                "flexDirection": "row",
                                "justifyContent": "flex-start",
                              },
                              Object {
                                "width": 0,
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "flex": 1,
                                  "flexDirection": "row",
                                },
                                Object {
                                  "justifyContent": "space-between",
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Object {
                                  "marginRight": 14,
                                }
                              }
                            >
                              <RNGestureHandlerButton
                                collapsable={false}
                                delayLongPress={600}
                                enabled={true}
                                exclusive={true}
                                handlerTag={2}
                                handlerType="NativeViewGestureHandler"
                                onGestureEvent={[Function]}
                                onGestureHandlerEvent={[Function]}
                                onGestureHandlerStateChange={[Function]}
                                onHandlerStateChange={[Function]}
                                rippleColor={0}
                                touchSoundDisabled={false}
                              >
                                <View
                                  accessible={true}
                                  collapsable={false}
                                  style={
                                    Object {
                                      "opacity": 1,
                                    }
                                  }
                                >
                                  <View>
                                    <Text
                                      style={
                                        Array [
                                          Object {
                                            "flexShrink": 0,
                                            "fontFamily": "GTGuardianTitlepiece-Bold",
                                            "fontSize": 24,
                                            "lineHeight": 26,
                                          },
                                          Array [
                                            Object {
                                              "color": "#FFFFFF",
                                              "marginTop": -2,
                                            },
                                            undefined,
                                            Object {
                                              "flexShrink": 0,
                                              "fontFamily": "GHGuardianHeadline-Regular",
                                              "fontSize": 24,
                                              "lineHeight": 26,
                                            },
                                            Object {},
                                          ],
                                        ]
                                      }
                                    >
                                      UK Daily
                                    </Text>
                                    <Text
                                      style={
                                        Array [
                                          Object {
                                            "flexShrink": 0,
                                            "fontFamily": "GTGuardianTitlepiece-Bold",
                                            "fontSize": 24,
                                            "lineHeight": 26,
                                          },
                                          Array [
                                            Object {
                                              "color": "#FFFFFF",
                                              "marginTop": -2,
                                            },
                                            Object {
                                              "color": "#ffe500",
                                            },
                                            undefined,
                                            Object {},
                                          ],
                                        ]
                                      }
                                    >
                                       
                                    </Text>
                                  </View>
                                </View>
                              </RNGestureHandlerButton>
                            </View>
                            <View
                              style={
                                Object {
                                  "paddingRight": 14,
                                }
                              }
                            >
                              <View
                                accessibilityHint="More issues"
                                accessibilityRole="button"
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                hitSlop={
                                  Object {
                                    "bottom": 10,
                                    "left": 10,
                                    "right": 10,
                                    "top": 10,
                                  }
                                }
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Object {
                                    "opacity": 1,
                                  }
                                }
                              >
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "alignItems": "center",
                                        "borderRadius": 999,
                                        "height": 42,
                                        "justifyContent": "center",
                                        "paddingHorizontal": 21,
                                      },
                                      Object {
                                        "backgroundColor": "#ffe500",
                                      },
                                      Object {
                                        "alignItems": "center",
                                        "aspectRatio": 1,
                                        "justifyContent": "center",
                                        "paddingHorizontal": 0,
                                        "width": 42,
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  <Text
                                    allowFontScaling={false}
                                    style={
                                      Array [
                                        Object {
                                          "fontFamily": "GuardianIcons-Regular",
                                          "fontSize": 20,
                                          "lineHeight": 20,
                                        },
                                        Array [
                                          Object {
                                            "color": "#121212",
                                          },
                                          undefined,
                                        ],
                                      ]
                                    }
                                  >
                                    
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
